--- a/Youtube_To_Google_Drive.ipynb
+++ b/Youtube_To_Google_Drive.ipynb
@@ -31,6 +31,7 @@
       "outputs": [],
       "source": [
         "from pytube import YouTube\n",
+        "import sys\n",
         "\n",
         "# Define the destination folder\n",
         "destination_folder = '/content/drive/MyDrive/DOWNLOADS 02/'\n",
@@ -39,7 +40,6 @@
         "if not os.path.exists(destination_folder):\n",
         "    os.makedirs(destination_folder)\n",
         "\n",
-        "# Function to download YouTube video with options\n",
         "def download_youtube_video(url, destination_folder):\n",
         "    try:\n",
         "        youtube = YouTube(url)\n",
@@ -48,23 +48,28 @@
         "        streams = youtube.streams.filter(type='video', progressive=True).order_by('resolution')\n",
         "\n",
         "        # Print available video qualities\n",
-        "        print(\"Available video qualities:\")\n",
+        "        print(\"\\nAvailable video qualities:\")\n",
         "        for i, stream in enumerate(streams, start=1):\n",
         "            print(f\"{i}. Resolution: {stream.resolution}, Format: {stream.mime_type}\")\n",
         "\n",
         "        # Prompt the user to select the video quality\n",
         "        selected_option = None\n",
         "        while selected_option is None:\n",
-        "            user_input = input(\"Enter the number of the desired video quality: \")\n",
+        "            user_input = input(\"\\nEnter the number of the desired video quality (or 'exit' to go back to URL menu): \")\n",
+        "\n",
+        "            if user_input.lower() == 'exit':\n",
+        "                return\n",
+        "\n",
+        "            if user_input.lower() == 'quit':\n",
+        "                sys.exit(\"Exiting the program.\")\n",
         "\n",
         "            if user_input.isdigit() and int(user_input) in range(1, len(streams) + 1):\n",
         "                # Retrieve the selected stream\n",
         "                selected_stream = streams[int(user_input) - 1]\n",
         "                selected_option = user_input\n",
         "            else:\n",
-        "                print(\"Invalid input. Please enter a valid number.\")\n",
+        "                print(\"Invalid input. Please enter a valid number, 'exit' to go back to URL menu, or 'quit' to exit the program.\")\n",
         "\n",
-        "        # Download the video\n",
         "        file_name = f\"{youtube.title} ({selected_stream.resolution})\"\n",
         "        file_path = os.path.join(destination_folder, file_name)\n",
         "        selected_stream.download(output_path=destination_folder, filename=file_name)\n",
@@ -74,11 +79,19 @@
         "    except Exception as e:\n",
         "        print(f\"An error occurred: {str(e)}\")\n",
         "\n",
-        "# Prompt the user for the YouTube video URL\n",
-        "youtube_url = input(\"Enter the YouTube video URL: \")\n",
         "\n",
-        "# Download the YouTube video\n",
-        "download_youtube_video(youtube_url, destination_folder)\n"
+        "while True:\n",
+        "\n",
+        "    user_input = input(\"\\nEnter the YouTube video URL (or 'exit' to go back to URL menu, or 'quit' to exit the program): \")\n",
+        "\n",
+        "    if user_input.lower() == 'exit':\n",
+        "        continue\n",
+        "\n",
+        "    if user_input.lower() == 'quit':\n",
+        "        print(\"Exiting the program.\")\n",
+        "        sys.exit()\n",
+        "\n",
+        "    download_youtube_video(user_input, destination_folder)\n"
       ]
     }
   ],
