--- a/Youtube_To_Google_Drive.ipynb
+++ b/Youtube_To_Google_Drive.ipynb
@@ -45,7 +45,7 @@
         "        youtube = YouTube(url)\n",
         "\n",
         "        # Get the available video streams\n",
-        "        streams = youtube.streams.filter(type='video', progressive=True).order_by('resolution')\n",
+        "        streams = youtube.streams.filter(type='video').order_by('resolution')\n",
         "\n",
         "        # Print available video qualities\n",
         "        print(\"\\nAvailable video qualities:\")\n",
@@ -55,7 +55,7 @@
         "        # Prompt the user to select the video quality\n",
         "        selected_option = None\n",
         "        while selected_option is None:\n",
-        "            user_input = input(\"\\nEnter the number of the desired video quality (or 'exit' to go back to URL menu): \")\n",
+        "            user_input = input(\"\\nEnter the number of the desired video quality (or 'exit' to go back to URL menu, or 'quit' to exit the program): \")\n",
         "\n",
         "            if user_input.lower() == 'exit':\n",
         "                return\n",
@@ -79,9 +79,7 @@
         "    except Exception as e:\n",
         "        print(f\"An error occurred: {str(e)}\")\n",
         "\n",
-        "\n",
         "while True:\n",
-        "\n",
         "    user_input = input(\"\\nEnter the YouTube video URL (or 'exit' to go back to URL menu, or 'quit' to exit the program): \")\n",
         "\n",
         "    if user_input.lower() == 'exit':\n",
@@ -90,6 +88,13 @@
         "    if user_input.lower() == 'quit':\n",
         "        print(\"Exiting the program.\")\n",
         "        sys.exit()\n",
+        "\n",
+        "    try:\n",
+        "\n",
+        "        youtube = YouTube(user_input)\n",
+        "    except Exception as e:\n",
+        "        print(f\"An error occurred: {str(e)}\")\n",
+        "        continue\n",
         "\n",
         "    download_youtube_video(user_input, destination_folder)\n"
       ]
